--- a/src/global.css
+++ b/src/global.css
@@ -17,6 +17,7 @@ body {
     /* overflow: hidden; */
     flex-direction: column;
     justify-content: flex-start;
+    background: #efefef;
 
 
     -webkit-touch-callout: none; /* iOS Safari */
